# flask-pancake

./: .coveragerc  .pre-commit-config.yaml  CHANGES.rst  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pythonpublish.yml  pythontests.yml
examples/: complex_app.py  simple-app.py  simple_app.py
flask_pancake/: __init__.py  commands.py  constants.py  extension.py  flags.py  registry.py  utils.py  views.py
flask_pancake/templates/flask_pancake/: overview.html
tests/: conftest.py  test_commands.py  test_e2e.py  test_extension.py  test_flags.py  test_registry.py  test_samples.py  test_switches.py  test_utils.py  test_views.py
