[build-system]
requires = [
    "setuptools >= 42.0.0",
    "setuptools_scm[toml] >= 3.4.2,<4",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.black]
target_version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | _build
    | build
    | dist
  )/
)
'''
